# colgm-mlir

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: TODO.md  syntax-design.md
scripts/: build.py  download_llvm.py  test.py
src/: lexer.cpp  lexer.h  lexer.hpp  main.cpp  misc.cpp  report.cpp  report.h  report.hpp
src/ast/: ast.cpp  ast.hpp  decl.cpp  decl.hpp  dumper.cpp  dumper.hpp  expr.cpp  expr.hpp  stmt.cpp  stmt.hpp  visitor.cpp  visitor.hpp
src/codegen/: dialect_loader.cpp  dialect_loader.hpp  generator.cpp  generator.hpp  intrinsic.cpp  intrinsic.hpp  mlir_generator.cpp  mlir_generator.hpp
src/dialect/: dialect.cpp  dialect.hpp  op.cpp  op.hpp
src/dialect/colgm/: binary_op.cpp  binary_op.hpp  broadcast.cpp  broadcast.hpp  cast_op.cpp  cast_op.hpp  cmp_op.cpp  cmp_op.hpp  constant_op.cpp  constant_op.hpp  elements.cpp  elements.hpp  for_op.cpp  for_op.hpp  if_op.cpp  if_op.hpp  print_op.cpp  print_op.hpp  reduce_sum.cpp  reduce_sum.hpp  reshape.cpp  reshape.hpp  slice.cpp  slice.hpp  stack.cpp  stack.hpp  transpose.cpp  transpose.hpp  unary_op.cpp  unary_op.hpp  yield.cpp  yield.hpp
src/dialect/pass/: colgm_lowering.cpp  colgm_lowering.hpp  constfold.cpp  constfold.hpp  lowering.cpp  lowering.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
src/parse/: parser.cpp  parser.hpp
src/report/: report.cpp  report.hpp
src/runtime/: print.c  print.cpp  print.hpp
src/sema/: context.cpp  context.hpp  intrinsic.cpp  intrinsic.hpp  sema.cpp  sema.hpp  storage.cpp  storage.hpp  type.cpp  type.hpp
src/test/: type_storage_test.cpp
src/tools/: colgm-opt.cpp
src/utils/: colgm.hpp  colorful.cpp  colorful.hpp  misc.cpp  source_manager.hpp  span.cpp  span.hpp  type.hpp
test/codegen/: example_0.colgm  example_0.colgm.stdout  example_1.colgm  example_1.colgm.stdout  example_10.colgm  example_10.colgm.stdout  example_11.colgm  example_11.colgm.stdout  example_12.colgm.stdout  example_13.colgm  example_13.colgm.stdout  example_14.colgm  example_14.colgm.stdout  example_15.colgm.stdout  example_16.colgm  example_16.colgm.stdout  example_17.colgm  example_17.colgm.stdout  example_18.colgm  example_18.colgm.stdout  example_19.colgm  example_19.colgm.stdout  example_2.colgm  example_2.colgm.stdout  example_20.colgm  example_20.colgm.stdout  example_21.colgm  example_21.colgm.stdout  example_22.colgm  example_22.colgm.stdout  example_23.colgm  example_23.colgm.stdout  example_24.colgm  example_24.colgm.option  example_24.colgm.stdout  example_3.colgm  example_3.colgm.stdout  example_4.colgm  example_4.colgm.stdout  example_5.colgm  (+9 more)
test/jit/: for_sum_exp.colgm  for_sum_exp.colgm.stdout  func.colgm  matmul.colgm  matmul.colgm.stdout  softmax.colgm  softmax.colgm.stdout
test/lexer/: example_0.colgm  example_0.stdout  example_1.colgm.stderr  example_2.colgm  example_2.colgm.stdout  invalid_operator.colgm  invalid_operator.stderr
test/lowering/: abs_op.colgm  abs_op.colgm.stdout  add_op.colgm  add_op.colgm.stdout  broadcast_op.colgm  broadcast_op.colgm.stdout  cmp_op.colgm  cmp_op.colgm.stdout  constant_op.colgm  constant_op.colgm.stdout  div_op.colgm  div_op.colgm.stdout  elements_op.colgm  elements_op.colgm.option  elements_op.colgm.stdout  exp_op.colgm  exp_op.colgm.stdout  for_op.colgm  for_op.colgm.stdout  if_op.colgm  if_op.colgm.stdout  log_op.colgm  log_op.colgm.stdout  matmul_op.colgm  matmul_op.colgm.stdout  mul_op.colgm  mul_op.colgm.stdout  neg_op.colgm  neg_op.colgm.stdout  print_op.colgm  print_op.colgm.stdout  reduce_sum_op.colgm  reduce_sum_op.colgm.stdout  relu_op.colgm  relu_op.colgm.stdout  reshape_op.colgm  reshape_op.colgm.stdout  sigmoid_op.colgm  sigmoid_op.colgm.stdout  slice_op.colgm  (+11 more)
test/mlir/: abs.mlir  abs.mlir.stdout  add.mlir  add.mlir.stdout  broadcast.mlir  broadcast.mlir.stdout  broadcast_bad_case_0.mlir  broadcast_bad_case_0.mlir.stderr  broadcast_bad_case_1.mlir  broadcast_bad_case_1.mlir.stderr  broadcast_bad_case_2.mlir  broadcast_bad_case_2.mlir.stderr  broadcast_bad_case_3.mlir  broadcast_bad_case_3.mlir.stderr  broadcast_bad_case_4.mlir  broadcast_bad_case_4.mlir.stderr  cast.mlir  cast.mlir.stdout  cast_bad_case_0.mlir  cast_bad_case_0.mlir.stderr  cast_bad_case_1.mlir  cast_bad_case_1.mlir.stderr  cast_bad_case_2.mlir  cast_bad_case_2.mlir.stderr  cast_bad_case_3.mlir.stderr  cast_bad_case_4.mlir.stderr  cast_lowering.mlir  cast_lowering.mlir.option  cast_lowering.mlir.stdout  cmp.mlir  cmp.mlir.stdout  cmp_bad_case_0.mlir  cmp_bad_case_0.mlir.stderr  cmp_bad_case_1.mlir  cmp_bad_case_1.mlir.stderr  cmp_bad_case_2.mlir  cmp_bad_case_2.mlir.stderr  constant.mlir  constant.mlir.stdout  constant_bad_case_0.mlir  (+142 more)
test/parse/: example_0.colgm  example_0.colgm.stdout  example_1.colgm  example_1.colgm.stdout  example_2.colgm  example_2.colgm.stdout  example_3.colgm  example_3.colgm.stdout  example_4.colgm  example_4.colgm.stdout  example_5.colgm  example_5.colgm.stdout  example_6.colgm  example_6.colgm.stdout
test/sema/: example_0.colgm  example_0.colgm.stderr  example_1.colgm  example_1.colgm.stdout  example_10.colgm  example_10.colgm.stderr  example_10.colgm.stdout  example_11.colgm  example_11.colgm.stderr  example_12.colgm  example_12.colgm.stderr  example_13.colgm  example_13.colgm.stderr  example_14.colgm  example_14.colgm.stderr  example_15.colgm  example_15.colgm.stderr  example_16.colgm  example_16.colgm.stderr  example_17.colgm  example_17.colgm.stderr  example_18.colgm  example_18.colgm.stderr  example_19.colgm  example_19.colgm.stderr  example_2.colgm  example_2.colgm.stderr  example_20.colgm  example_20.colgm.stderr  example_21.colgm  example_21.colgm.stderr  example_3.colgm  example_3.colgm.stderr  example_4.colgm  example_4.colgm.stderr  example_5.colgm  example_5.colgm.stdout  example_6.colgm  example_6.colgm.stderr  example_7.colgm  (+5 more)
